--- a/index.html
+++ b/index.html
@@ -8,23 +8,12 @@
         <title>Word-a-be</title>
     </head>
     <body>
-        <h1>Word-a-be</h1>
+        <h1>Word-a-be 2.0</h1>
         <main class="container">
-            <div class="grid-container"></div>
-            <div class="reveal"></div>
-            <div class="input-container"></div>
+            <div id="attempt-container"></div>
+            <div id="reveal"></div>
         </main>
-        <div class="keyboard"></div>
-
-        <template id="grid-item">
-            <div class="grid-item"></div>
-        </template>
-        <template id="key-row">
-            <div class="row"></div>
-        </template>
-        <template id="key-button">
-            <button class="key" value=""></button>
-        </template>
+        <div id="keyboard"></div>
         <script src="./js/script.js"></script>
     </body>
 </html>
