Add: Star on GitHub link

--- a/index.html
+++ b/index.html
@@ -5,15 +5,19 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="./css/styles.css" rel="stylesheet" />
-        <title>Word-a-be</title>
+        <title>Wordle Wannabe</title>
     </head>
     <body>
-        <h1>Word-a-be 2.0</h1>
+        <h1>Wordle Wannabe</h1>
         <main class="container">
             <div id="attempt-container"></div>
             <div id="reveal"></div>
         </main>
         <div id="keyboard"></div>
+        <div id="outro">
+            <a class="github-button" href="https://github.com/edlinkiii/word-a-be" data-icon="octicon-star" data-show-count="true" aria-label="Star edlinkiii/word-a-be on GitHub">GitHub</a>
+        </div>
         <script src="./js/script.js"></script>
+        <script async defer src="https://buttons.github.io/buttons.js"></script>
     </body>
 </html>
